Student progress recalculation for course after instructor graded